Table com Eventos e input de pesquisa com Two-databiding

--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,7 +1,67 @@
-<h1>Eventos</h1>
+<h2>Eventos</h2>
+<hr />
 
-<div *ngFor="let evento of eventos">
-    <p><b>Tema:</b> {{ evento.tema }} </p>
-    <p><b>Local:</b> {{ evento.local }} </p>
-    <hr>
-</div>
+<form>
+    <div class="mb-3 row">
+
+        <div class="form-group mb-2 col-xs-3 col-sm-auto">
+            <input id="table-complete-search" 
+                type="text" class="form-control" 
+                name="searchTerm" placeholder="Buscar"
+                [(ngModel)] = "filtroListaEventos"  
+            />
+        </div>
+        <h2>{{filtroListaEventos}}</h2>
+        <!-- @if (service.loading$ | async) {
+			<span class="col col-form-label">Loading...</span>
+		} -->
+    </div>
+</form>
+
+<table class="table table-striped table-hover">
+  <thead class="table-dark">
+        <tr>
+            <th>#</th>
+            <th>
+                <button class="btn btn-outline-light btn-sm" 
+                        type="button" 
+                        data-bs-toggle="collapse" 
+                        data-bs-target=".collapse-img">
+                    {{ !exibirImagem ? 'Exibir Img' : 'Ocultar Img' }}
+                </button>
+            </th>
+            <th scope="col" sortable="name"> Tema </th>
+            <th scope="col" sortable="name"> Local </th>
+            <th>Data</th>
+            <th>Qtd Pessoas</th>
+            <th>Lote</th>
+            <th>Opções</th>
+        </tr>
+    </thead>
+    @if (eventos != null && eventos.length) {
+        <tbody>
+            @for (evento of eventosFiltrados; track evento.eventoId) {
+                <tr class="align-middle">
+                    <td>{{ evento.eventoId }}</td>
+                    <td>
+                        <div class="collapse collapse-img show">
+                            <img src="/assets/{{evento.imagemUrl}}" 
+                                 alt="foto de {{evento.imagemUrl}}" 
+                                 [style.width.px]="larguraImagem">
+                        </div>
+                    </td>
+                    <td>{{ evento.tema }}</td>              
+                    <td>{{ evento.local }}</td>
+                    <td>{{ evento.dataEvento }}</td>
+                    <td>{{ evento.quantidadeDePessoas }}</td>
+                    <td>{{ evento.lote }}</td>
+                    <td> [s] [a] [e] </td>
+                </tr>
+            }
+        </tbody>
+    } @else {
+        <tfoot><tr><td colspan="8" class="text-center">Nenhum evento encontrado</td></tr></tfoot>
+    }
+    
+    
+</table>
