--- a/Front/ProEventos-App/src/app/components/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/components/nav/nav.component.html
@@ -1,26 +1,36 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-    <a class="navbar-brand" aria-current="page" href="#">ProEventos</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
+    <a class="navbar-brand" aria-current="page" href="#">PróEventos</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
+        aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="navbarOffcanvasLgLabel">Menu</h5>
+            <h5 class="offcanvas-title" id="navbarOffcanvasLgLabel">PróEventos</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
+            <!-- Left links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Eventos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Palestrantes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contatos</a>
+                </li>
+            </ul>
+            <!-- Right links -->
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-calendar-alt"></i> Eventos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-microphone"></i> Palestrantes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-address-book"></i> Contatos</a>
+                <li class="nav-item me-3 me-lg-1">
+                    <a class="nav-link d-sm-flex align-items-sm-center" href="#">
+                        <img src="https://mdbootstrap.com/img/new/avatars/1.webp" class="rounded-circle" height="22"
+                            alt="Avatar" loading="lazy" />
+                    </a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-
