--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -55,7 +55,15 @@
                     <td>{{ evento.dataEvento }}</td>
                     <td>{{ evento.quantidadeDePessoas }}</td>
                     <td>{{ evento.lote }}</td>
-                    <td> [s] [a] [e] </td>
+                    <td>
+                        <button type="button" class="btn btn-outline-success">
+                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                        </button>
+                        ...
+                        <button type="button" class="btn btn-outline-danger">
+                            <i class="fa fa-trash" aria-hidden="true"></i>
+                        </button>
+                    </td>
                 </tr>
             }
         </tbody>
