--- a/Front/ProEventos-App/src/app/app.component.html
+++ b/Front/ProEventos-App/src/app/app.component.html
@@ -1,6 +1,7 @@
-<app-nav />
+<app-nav></app-nav>
 
 <div class="container">
-  <app-eventos />
-  <router-outlet />
+  <router-outlet></router-outlet>
 </div>
+
+<!-- <ngx-spinner bdColor="rgba(0,0,0,0.8)" size="medium" color="#fff" type="ball-clip-rotate"></ngx-spinner> -->
