--- a/Front/ProEventos-App/src/app/app.component.scss
+++ b/Front/ProEventos-App/src/app/app.component.scss
@@ -1,3 +1,11 @@
 .container {
     padding-top: 1rem;
 }
+
+.ngx-spinner-overlay {
+    z-index: 9999 !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+  }
+  
