Adiconando e configurando rotas de Eventos e componentizando eventos

--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
-    <a class="navbar-brand" aria-current="page" href="#">PróEventos</a>
+<nav class="navbar navbar-expand-lg bg-primary shadow-sm" data-bs-theme="dark">
+    <div class="container-fluid">
+    <a class="navbar-brand" aria-current="page" href="#">Pró>Eventos</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
         aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -13,7 +14,7 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" routerLink="eventos">Eventos</a>
+                    <a class="nav-link" routerLink="eventos/lista">Eventos</a>
                 </li>
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="palestrantes">Palestrantes</a>
@@ -35,6 +36,7 @@
                 </li>
             </ul>
         </div>
+    </div>
     </div>
 </nav>
 
