--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,75 +1,4 @@
-<app-titulo-da-pagina [titulo]="'Eventos'"></app-titulo-da-pagina>
-<form>
-    <div class="mb-3 row">
+<app-titulo-da-pagina [titulo]="'Eventos'" [iconClass]="'fa-regular fa-calendar-days'" [botaoListar]="true">
+</app-titulo-da-pagina>
 
-        <div class="form-group mb-2 col-xs-3 col-sm-auto">
-            <input id="table-complete-search" type="text" class="form-control" name="searchTerm" placeholder="Buscar"
-                [(ngModel)]="filtroListaEventos" />
-        </div>
-        <h2>{{filtroListaEventos}}</h2>
-        <!-- @if (service.loading$ | async) {
-			<span class="col col-form-label">Loading...</span>
-		} -->
-    </div>
-</form>
-
-<table class="table table-striped table-hover">
-  <thead class="table-dark">
-    <tr>
-      <th>#</th>
-      <th>
-        <button class="btn btn-outline-light btn-sm" type="button" data-bs-toggle="collapse"
-                data-bs-target=".collapse-img" (click)="ocultarImagem()">
-          <i class="fa" [ngClass]="exibirImagem ? 'fa-eye-slash' : 'fa-eye'"></i>
-          Imagem
-        </button>
-      </th>
-      <th scope="col" sortable="name">Tema</th>
-      <th scope="col" sortable="name">Local</th>
-      <th>Data</th>
-      <th>Qtd Pessoas</th>
-      <th>Lote</th>
-      <th>Opções</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="eventos && eventos.length; else noEvents">
-    <tr *ngFor="let evento of eventosFiltrados" class="align-middle">
-      <td>{{ evento.id }}</td>
-      <td>
-        <div class="collapse collapse-img show">
-          <img src="/assets/{{evento.imagemUrl}}" alt="foto de {{evento.imagemUrl}}"
-               [style.width.px]="larguraImagem">
-        </div>
-      </td>
-      <td>{{ evento.tema }}</td>
-      <td>{{ evento.local }}</td>
-      <td>{{ evento.dataEvento | dateTimeFormatPipe }}</td>
-      <td>{{ evento.quantidadeDePessoas }}</td>
-      <td>{{ evento.lotes[0].nome }}</td>
-      <td>
-        <button type="button" class="btn btn-outline-success btn-sm me-2" tooltip="Editar">
-          <i class="fa fa-edit" aria-hidden="true"></i>
-        </button>
-        <button type="button" class="btn btn-outline-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
-          <i class="fa fa-trash" aria-hidden="true"></i>
-        </button>
-      </td>
-    </tr>
-  </tbody>
-  <ng-template #noEvents>
-    <tfoot>
-      <tr>
-        <td colspan="8" class="text-center">Nenhum evento encontrado</td>
-      </tr>
-    </tfoot>
-  </ng-template>
-</table>
-
-
-<ng-template #template>
-    <div class="modal-body text-center">
-      <p>Tem certeza que quer excluir este evento?</p>
-      <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
-      <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
-    </div>
-  </ng-template>
+<router-outlet></router-outlet>
