--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -1,6 +1,45 @@
-<p>
-    This is a DetailsEvents
-</p>
-<p>
-    Estamos em Construção!
-</p>
+<div class="card rounded shadow-sm p-2">
+<form>
+    <div class="p-3">
+        <div class="row pb-3">
+            <div class="form-group col-md-12">
+                <label>Tema</label>
+                <input type="text" class="form-control" placeholder="Insira o Tema">
+            </div>
+        </div>
+        <div class="row pb-3">
+            <div class="form-group col-md-8">
+                <label>Local</label>
+                <input type="text" class="form-control" placeholder="">
+            </div>
+            <div class="form-group col-md-4">
+                <label>Data e Hora</label>
+                <input type="datetime" class="form-control" placeholder="">
+            </div>
+        </div>
+        <div class="row pb-3">
+            <div class="form-group col-md-2">
+                <label>Qtd Pessoas</label>
+                <input type="text" class="form-control is-invalid" placeholder="">
+            </div>
+            <div class="form-group col-md-4">
+                <label>Telefone</label>
+                <input type="text" class="form-control" placeholder="(000) 90000-0000">
+            </div>
+            <div class="form-group col-md-6">
+                <label>Email</label>
+                <input type="text" class="form-control" placeholder="e-mail">
+            </div>
+        </div>
+    </div>
+
+    <div class="card-footer d-flex justify-content-end mt-3 p-3">
+        <button class="btn btn-outline-warning me-2">Cancelar Alteração</button>
+        <button class="btn btn-success">
+            <span class="spinner-border spinner-border-sm mr-1 me-2"></span>
+            Salvar Alteração
+        </button>
+    </div>
+    
+</form>
+</div>
