--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -15,7 +15,7 @@
     </form>
   
     <table class="table table-striped table-hover">
-      <thead class="table-dark">
+      <thead class="table-primary">
         <tr>
           <th>#</th>
           <th class="d-none d-md-table-cell">
