Validacao com FormGroup e ReactiveFormsModule

--- a/Front/ProEventos-App/src/app/components/user/login/login.component.html
+++ b/Front/ProEventos-App/src/app/components/user/login/login.component.html
@@ -6,18 +6,18 @@
       
       <form>
         <div class="mb-3">
-          <input type="email" id="username" class="form-control text-center" placeholder="Digite seu e-mail" name="username" required>
+          <input type="email" id="username" class="form-control text-center rounded" placeholder="Digite seu e-mail" name="username" required>
         </div>
 
         <div class="mb-3">
-          <input type="password" id="password" class="form-control text-center" placeholder="Digite sua senha" name="password" required>
+          <input type="password" id="password" class="form-control text-center rounded" placeholder="Digite sua senha" name="password" required>
         </div>
         
-        <button type="submit" class="btn btn-primary w-100">Entrar</button>
+        <button type="submit" class="btn btn-primary w-100 rounded">Entrar</button>
       </form>
       
       <p class="mt-4 text-muted">Não tem login? Cadastre-se abaixo</p>
-      <button class="btn btn-outline-primary w-100" 
+      <button class="btn btn-outline-primary w-100 rounded" 
         routerLink="/user/registration">
         Quero me cadastrar
       </button>
